:heavy_plus_sign: Add new dependencie jspdf

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "json-2-csv": "^3.17.1",
+    "jspdf": "^2.5.1",
     "mongoose": "^6.3.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
